Add support for exclusions and maven settings import